# carcanet

./: .gitignore  README.md  pyproject.toml  readme.md
code/: baseline_aug.py  lora.py  outline.py  simplify_targets.py  stable_diffusion.py  style_loss.py  unet-torch.py  unet.py
src/glyptic/: __init__.py  enhance_fingerprints.py  enhance_utils.py  glyptic_setup.py  glyptic_workflow.py  setup_xdg.py
src/glyptic/internal/: .gitignore  extra_model_paths.yaml
src/glyptic_setup/: __init__.py
