[project]
name = "glyptic"
version = "0.1.0"
description = "Dactylogram to intaglio for your carcanets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "einops>=0.8.0",
    "keras>=3.5.0",
    "keras-preprocessing>=1.1.2",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scipy>=1.14.1",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.13.3",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchsde>=0.2.6",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "transformers>=4.28.1",
    "comfy-script[default]>=0.5.1",
    "vtracer>=0.6.11",
    "pip>=24.2",
    "opencv-python>=4.10.0.84",
    "tensorflow>=2.17.0",
    "scikit-image>=0.24.0",
]
keywords = ["fingerprint", "stable diffusion", "sdxl", "fingerprint enhancement", "jewelry engraving", "img2img", "image-to-image",]
authors = [
  {name = "Tarik Salameh", email = "tarik.salameh@gmail.com"},
]
license-files = { paths = ["LICENSE", "src/glyptic/internal/LICENSE"] }


[project.scripts]
glyptic = "glyptic:glyptic"

[tool.uv]
no-build-isolation-package = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
