[project]
name = "glyptic"
version = "0.1.0"
description = "Dactylogram to intaglio for your carcanets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "einops>=0.8.0",
    "keras>=3.5.0",
    "keras-preprocessing>=1.1.2",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scipy>=1.14.1",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.13.3",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchsde>=0.2.6",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "transformers>=4.28.1",
    "comfy-script[default]>=0.5.1",
    "vtracer>=0.6.11",
    "pip>=24.2",
    "opencv-python>=4.10.0.84",
    "tensorflow>=2.17.0",
    "scikit-image>=0.24.0",
    "xdg-base-dirs>=6.0.1",
    "huggingface-hub>=0.25.0",
]
keywords = ["fingerprint", "stable diffusion", "sdxl", "fingerprint enhancement", "jewelry engraving", "img2img", "image-to-image",]
authors = [
  {name = "Tarik Salameh", email = "tarik.salameh@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.12",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Repository = "https://github.com/tariks/glyptic.git"

[project.scripts]
glyptic = "glyptic:glyptic"
glyptic_setup = "glyptic_setup:glyptic_setup"

[tool.basedpyright]
include = ["src/glyptic", "src/glyptic/internal"]
venvPath = ".venv"
reportMissingTypeStubs = false
reportMissingImports = "none"
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
